--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
     <%= render 'layouts/footer' %>
     </div>
     <div id="f-modal" uk-modal>
-        <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+        <div class="uk-modal-dialog uk-modal-body">
+            <button class="uk-modal-close-default" type="button" uk-close></button>
             <div class="modal-content">
                 <span class="loading">Loading</span>
             </div>
