Add show/hide labels options for graphs. Fix problem with developers chart - when clicking on legend only one from two charts changes.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1402,3 +1402,8 @@ span.add-form-errors {
 .uk-accordion-content {
     margin: 0;
 }
+
+a.hide-labels {
+    font-size: 12px;
+    color: #999 !important;
+}
