--- a/app/views/charts/_by_developer_overall.html.erb
+++ b/app/views/charts/_by_developer_overall.html.erb
@@ -1,6 +1,7 @@
+<%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'dev_a_over, dev_b_over' %>
 <%= content_tag :div, class: 'uk-grid-collapse', 'uk-grid' => '' do %>
 
-  <% dataset_options = { borderWidth: 0, datalabels: { color: '#fff' } }  %>
+  <% dataset_options = { borderWidth: 0, datalabels: { color: '#fff', opacity: 1 } }  %>
   <% options = { scales: { xAxes: [{ ticks: { max: data[:max], stepSize: 1 } }]} } %>
   <% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)', 'rgba(186, 186, 186, 1)' ] %>
 
@@ -29,24 +30,42 @@
     messages: { empty: "No data" }
     %>
 
-    <%= javascript_tag do %>
-      var p_labels_1 = <%= raw data[:p_labels_1] %>;
-      var p_labels_2 = <%= raw data[:p_labels_2] %>;
-      var d_labels_1 = <%= raw data[:d_labels_1] %>;
-      var d_labels_2 = <%= raw data[:d_labels_2] %>;
-      var nd_labels_1 = <%= raw data[:nd_labels_1] %>;
-      var nd_labels_2 = <%= raw data[:nd_labels_2] %>;
+    <script type="text/javascript">
+      var ids = ['dev_a_over', 'dev_b_over'];
+      var p_labels = [<%= raw data[:p_labels_1] %>, <%= raw data[:p_labels_2] %>];
+      var d_labels = [<%= raw data[:d_labels_1] %>, <%= raw data[:d_labels_2] %>];
+      var nd_labels = [<%= raw data[:nd_labels_1] %>, <%= raw data[:nd_labels_2] %>];
 
-      var chart = Chartkick.charts["dev_a_over"].getChartObject();
-      chart.data.datasets[0].datalabels = { display: p_labels_1, color: '#fff' };
-      chart.data.datasets[1].datalabels = { display: d_labels_1, color: '#fff'};
-      chart.data.datasets[2].datalabels = { display: nd_labels_1, color: '#fff'};
-      chart.update();
+      var labels = [p_labels, d_labels, nd_labels]
 
-      var chart = Chartkick.charts["dev_b_over"].getChartObject();
-      chart.data.datasets[0].datalabels = { display: p_labels_2, color: '#fff' };
-      chart.data.datasets[1].datalabels = { display: d_labels_2, color: '#fff'};
-      chart.data.datasets[2].datalabels = { display: nd_labels_2, color: '#fff'};
-      chart.update();
-    <% end %>
+      for (var i in ids) {
+
+          var chart = Chartkick.charts[ids[i]].getChartObject();
+
+          for (var k in labels) {
+              chart.data.datasets[k].datalabels = {
+                  display: labels[k][i],
+                  color: '#fff',
+                  opacity: 1
+              };
+          }
+
+          if (i == 0) {
+              chart.options.legend.onClick = function(e, legendItem) {
+                  var dev_charts = ['dev_a_over', 'dev_b_over'];
+                  var index = legendItem.datasetIndex;
+
+                  for (var i in dev_charts) {
+                      var c = Chartkick.charts[dev_charts[i]].getChartObject();
+                      var meta = c.getDatasetMeta(index);
+                      meta.hidden = meta.hidden === null ? !c.data.datasets[index].hidden : null;
+                      c.update();
+                  }
+              }
+
+          }
+
+          chart.update();
+      }
+    </script>
 <% end %>
