--- a/app/views/charts/graphs.js.erb
+++ b/app/views/charts/graphs.js.erb
@@ -74,3 +74,5 @@ if (overall) {
 $('#in-comparison').html(first_chart);
 $('#by-release').html(by_release);
 $('#by-developer').html(by_developer);
+
+labelsHiders();
