--- a/app/views/charts/_by_format.html.erb
+++ b/app/views/charts/_by_format.html.erb
@@ -1,9 +1,11 @@
+<%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'moved-by-format' %>
+
 <% options = { legend: { position: 'left'},
               plugins: { datalabels: { color: '#fff', borderRadius: 9999, borderWidth: 2, borderColor: '#fff', anchor: 'end' } },
               layout: { padding: { top: 15, bottom: 15, right: 15 } }
               } %>
 <% colors = ['#49AB8a', '#ab496a', '#bababa'] %>
-<% dataset_options = { datalabels: { backgroundColor: colors } } %>
+<% dataset_options = { datalabels: { backgroundColor: colors, opacity: 1 } } %>
 <%= pie_chart data,
 id: 'moved-by-format',
 donut: true,
