Fix charts problem when no games or no collections.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1407,3 +1407,8 @@ a.hide-labels {
     font-size: 12px;
     color: #999 !important;
 }
+
+.chart-no-data {
+    font-size: 14px;
+    font-style: italic;
+}
