--- a/app/views/charts/_by_release.html.erb
+++ b/app/views/charts/_by_release.html.erb
@@ -1,23 +1,28 @@
-<%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'chart-1' %>
-<% options = { scales: { xAxes: [{ maxBarThickness: 40 }] },
-               tooltips: { mode: 'index', intersect: false }
-               } %>
-<% dataset_options = { borderWidth: 0, datalabels: { color: '#fff', opacity: 1 } } %>
-<% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)'] %>
-<% if needs_platform %>
-  <%= column_chart data[:data], stacked: true,
-   dataset: dataset_options, library: options, colors: colors, messages: { empty: "No data" }  %>
-  <%= javascript_tag do %>
-    var p_labels = <%= raw data[:p_labels] %>;
-    var d_labels = <%= raw data[:d_labels] %>;
-    var chart = Chartkick.charts["chart-1"].getChartObject();
-    chart.data.datasets[0].datalabels = { display: p_labels, color: '#fff', opacity: 1 };
-    chart.data.datasets[1].datalabels = { display: d_labels, color: '#fff', opacity: 1 };
-    chart.update();
+<% no_data = needs_platform ? data[:data].first[:data].empty? : data[:data].empty? %>
+<% unless no_data %>
+  <%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'chart-1' %>
+  <% options = { scales: { xAxes: [{ maxBarThickness: 40 }] },
+                 tooltips: { mode: 'index', intersect: false }
+                 } %>
+  <% dataset_options = { borderWidth: 0, datalabels: { color: '#fff', opacity: 1 } } %>
+  <% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)'] %>
+  <% if needs_platform %>
+    <%= column_chart data[:data], stacked: true,
+     dataset: dataset_options, library: options, colors: colors, messages: { empty: "No data" }  %>
+    <script type="text/javascript">
+      var p_labels = <%= raw data[:p_labels] %>;
+      var d_labels = <%= raw data[:d_labels] %>;
+      var chart = Chartkick.charts["chart-1"].getChartObject();
+      chart.data.datasets[0].datalabels = { display: p_labels, color: '#fff', opacity: 1 };
+      chart.data.datasets[1].datalabels = { display: d_labels, color: '#fff', opacity: 1 };
+      chart.update();
+    </script>
+  <% else %>
+    <% dataset_options[:datalabels][:display] = data[:labels] %>
+    <% options[:layout] = { padding: { top: 20 } } %>
+    <%= column_chart data[:data], dataset: dataset_options,
+     library: options, colors: colors %>
   <% end %>
 <% else %>
-  <% dataset_options[:datalabels][:display] = data[:labels] %>
-  <% options[:layout] = { padding: { top: 20 } } %>
-  <%= column_chart data[:data], dataset: dataset_options,
-   library: options, colors: colors, messages: { empty: "No data" } %>
+  <%= content_tag :span, '- no data -', class: 'chart-no-data' %>
 <% end %>
