--- a/app/views/charts/_by_release.html.erb
+++ b/app/views/charts/_by_release.html.erb
@@ -1,9 +1,12 @@
 <% no_data = needs_platform ? data[:data].first[:data].empty? : data[:data].empty? %>
 <% unless no_data %>
   <%= content_tag :a, 'hide labels', class: 'hide-labels', 'chart_id' => 'chart-1' %>
-  <% options = { scales: { xAxes: [{ maxBarThickness: 40 }] },
+
+  <% options = { scales: { xAxes: [{ maxBarThickness: 40 }],
+                           yAxes: [ticks: { max: data[:max] }] },
                  tooltips: { mode: 'index', intersect: false }
                  } %>
+
   <% dataset_options = { borderWidth: 0, datalabels: { color: '#fff', opacity: 1 } } %>
   <% colors = ['rgba(73, 171, 138, 1)','rgba(171, 73, 106, 1)'] %>
   <% if needs_platform %>
